graphql-schema-parser/src/test/negative/override-existing-scalar.graphqls
schema {
    query: Query
}

scalar Url

type Query {
    someIntField: Int
    someStringField: String
}

scalar Url